# ulysses

./: .gitignore  LICENSE  init_db.sh  package.json  pyproject.toml  requirements.txt  services.sh  todo.txt  uadmin
cli/: __main__.py  check.py  (+13 more)
ulysses-backend/: pyproject.toml
ulysses-backend/app/: bot_messages.py  config.py  database.py  email_service.py  enot_service.py  gates.json  main.py  models.py  monitoring.py  provisioning_service.py  system_info.py  tariffs.json
ulysses-backend/app/commands/: seed_nodes.py
ulysses-backend/app/routers/: admin.py  billing.py  billing_old.py  bot.py  sub_render.py  test_billing.py  user.py  webhooks.py
ulysses-backend/app/services/: aeza_client.py  aeza_sync.py  billing_gateways.py  hiddify_client.py  monitor.py  provisioning_manager.py  provisioning_manager_full.py
ulysses-backend/app/tasks/: workers.py
ulysses-backend/tests/: check_system_health.sh  debug_config.py  email_helper.py  run_all.py  set_env.py  test_01_create_user_email.py  test_02_create_user_telegram.py  test_03_subscription_renewal.py  test_04_user_info.py  test_05_free_tariff.py  test_06_unlink_telegram.py  test_07_admin_stats.py  test_08_idempotency_webhooks.py  test_09_concurrent_provisioning.py  test_10_hiddify_api_failures.py  test_11_security_check.py  test_12_platega_webhook.py
ulysses-backend/tests/integration/: bot_basic.py  bot_tg_lifecycle.py  complete_brain_cycle.py  full-user_cycle.py
ulysses-backend/tests/lib/: test_helpers.py
ulysses-backend/tests/unit/: test_billing_calculator.py  test_bot_messages.py  test_pydantic_models.py
(+79 files in other folders)
