[project]
name = "ulysses"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "aiosmtplib>=5.1.2",
    "click>=8.4.2",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic[email]>=2.13.4",
    "rich>=15.0.0",
    "uvicorn>=0.50.2",
]
