[project]
name = "ulysses-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "psutil>=5.9.0",
]
